--- a/style.css
+++ b/style.css
@@ -3,7 +3,9 @@ body {
     margin: 0;
     min-height: 100vh;
     display: flex;
+    flex: 1;
     flex-direction: column;
+    font-size: 18px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -11,9 +13,10 @@ body {
 .header {
     display: flex;
     flex-direction: column;
+    flex: 1;
     justify-content: space-between;
     background-color: #1f2937;
-    color: white;
+    color: #E5E7EB;
     padding-top: 25px;
     padding-bottom: 45px;
     padding-left: 90px;
@@ -33,9 +36,18 @@ a {
     color: white;
 }
 
+
+
 h1 {
+    font-size: 48px;
+    font-weight: bolder;
+    color: #F9FAF8;
     margin: 0;
     padding-bottom: 0;
+}
+
+p {
+    font-size: 18px;
 }
 
 .top-bar {
@@ -55,6 +67,17 @@ h1 {
     width: 500px;
 }
 
+.img-block {
+    display: flex;
+    flex-shrink: 1;
+    width: 400px;
+    height: 200px;
+    background-color: #969dab;
+    justify-content: center;
+    align-items: center;
+}
+
+
 button {
     background-color: #3882f6;
     width: 90px;
@@ -63,4 +86,49 @@ button {
     border: none;
     color: white;
     
+}
+
+.info-connect {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    flex-wrap: wrap;
+    padding-top: 35px;
+    padding-left: 200px;
+    padding-right: 200px;
+}
+
+
+.project-block {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 75px;
+}
+
+.project-link {
+    display: block;
+    text-decoration: none;
+    color: inherit;
+}
+
+.project-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 175px;
+    color: black;
+}
+
+.placeholder-blok {
+    display: flex;
+    width: 150px;
+    height: 150px;
+    border: 3px solid;
+    border-color: #1a58d2;
+    border-radius: 25px;
+    margin: 25px;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 0;
 }
